# InvoiceGPT-TS-Forecasting

./: .gitignore  10_time_series_forecasting_in_tensorflow.ipynb  LICENSE  README.md  TSForecasting_InvoiceGPT.ipynb  chat_model.py  config.py  pyproject.toml  synthetic_data.py
.ipynb_checkpoints/: TSForecasting_InvoiceGPT-checkpoint.ipynb
generated_data/: Groceries.csv
